<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/TextHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-condensed"
            android:textAlignment="center"
            android:textSize="34sp"
            android:text="@string/second_fragment_label"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="287dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/nameins"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/emailmessage"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/passins"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/passwordmessage"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:inputType="textPassword"
            android:password="false" />

        <TextView
            android:id="@+id/passins2"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/conpasswordmessage"/>

        <EditText
            android:id="@+id/conpassword"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signupAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:text="SignUp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>