<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="93dp">


        <TextView
            android:id="@+id/textHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/first_fragment_label"
            android:textAlignment="center"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="287dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/nameins3"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/emailmessage" />

        <EditText
            android:id="@+id/emailLog"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/passins4"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/passwordmessage" />

        <EditText
            android:id="@+id/passwordLog"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:ems="10"
            android:inputType="textPassword"
            android:password="false" />

        <Button
            android:id="@+id/loginAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:text="Log In" />

        <Button
            android:id="@+id/newAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>